--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 <div class="page-header">
+    <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span
+            class="glyphicon glyphicon-plus"></span></a>
     <h1><a href="/">Django Girls Blog</a></h1>
 </div>
 <div class="content container">
@@ -21,5 +23,4 @@
     </div>
 </div>
 </body>
-
 </html>
